--- a/styles/pages/_CreateContract.scss
+++ b/styles/pages/_CreateContract.scss
@@ -609,4 +609,8 @@
       }
     }
   }
+
+  .sendingData {
+    background-color: rgba($DarkBg, 0.8);
+  }
 }
